// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component renders a variety of strings correctly empty string 1`] = `
<a
  class="css-19tmgc6-StyledLink-linkStyling eygprlc0"
  href=""
>
  Empty string
</a>
`;

exports[`Link component renders a variety of strings correctly external URL 1`] = `
<a
  class="css-19tmgc6-StyledLink-linkStyling eygprlc0"
  href="http://mongodb.com"
>
  MongoDB Company
</a>
`;

exports[`Link component renders a variety of strings correctly external mailto 1`] = `
<a
  class="css-19tmgc6-StyledLink-linkStyling eygprlc0"
  href="mailto:person@mail.com"
>
  Jake Gyllenhaal
</a>
`;

exports[`Link component renders a variety of strings correctly internal link 1`] = `
<a
  class="test-class css-19a3n6-AsInternalLink-StyledLink-linkStyling eygprlc1"
  href="/drivers/c/"
>
  C Driver
</a>
`;
